load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@crates//:defs.bzl", "crate")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

rust_shared_library(
    name = "bindings",
    srcs = ["bindings.rs"],
    proc_macro_deps = [
        crate("derive_more"),
    ],
    deps = [
        crate("cgmath"),
        crate("pyo3"),
        crate("serde_json"),
        crate("thiserror"),
        "//engine",
        "//engine/highway",
        "//engine/metro",
        "//engine/quadtree",
        "//engine/tiles",
    ],
)

# for some reason this indirection is necessary for the shared library to appear in the runfiles
genrule(
    name = "engine_so",
    srcs = [":bindings"],
    outs = ["engine.so"],
    cmd = "cp $< $@",
)

py_library(
    name = "python",
    data = [":engine_so"],
    imports = ["."],
    visibility = ["//visibility:public"],
)

py_test(
    name = "importable_test",
    srcs = ["importable_test.py"],
    deps = [":python"],
)
