load("//util:macros.bzl", "ms_rust_binary")
load("@pip_pkgs//:requirements.bzl", "requirement")
load(":datasets.bzl", "datasets")

datasets.preprocess()

ms_rust_binary(
    name = "osm_preprocess",
    srcs = ["osm_preprocess.rs"],
    deps = [
        "@crates//:clap",
        "@crates//:osm-xml",
        "@crates//:osmpbfreader",
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
