load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@crates//:defs.bzl", "crate")
load("@rules_android//android:rules.bzl", "android_binary")

# NOTE: only compiles for Android
rust_shared_library(
    name = "metro_simulator_android",
    srcs = ["main.rs"],
    tags = ["manual"],
    deps = [
        "//viewers/app",
        crate("ndk"),
        crate("ndk-glue"),
    ],
)

cc_import(
    name = "native_library",
    shared_library = ":metro_simulator_android",
)

android_binary(
    name = "app",
    # NOTE: currently no java code
    srcs = glob(["src/**/*.java"]),
    custom_package = "com.calsignlabs.metro_simulator",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    deps = [
        ":native_library",
    ],
)
