load("//util:macros.bzl", "ms_rust_shared_library")
load("@rules_android//android:rules.bzl", "android_binary")
load("//mobile/platform:transitions.bzl", "android_cpu_wrapper")

# NOTE: only compiles for Android
ms_rust_shared_library(
    name = "metro_simulator_android",
    srcs = ["main.rs"],
    tags = ["manual"],
    deps = [
        "//viewers/app",
        "@crates//:ndk",
        "@crates//:ndk-glue",
    ],
)

cc_import(
    name = "native_library",
    shared_library = ":metro_simulator_android",
)

# this target is marked manual because it doesn't build in the default configuration
android_binary(
    name = "app",
    # NOTE: currently no java code
    srcs = glob(["src/**/*.java"]),
    assets = ["//maps:sf"],
    assets_dir = "",
    custom_package = "com.calsignlabs.metro_simulator",
    manifest = "AndroidManifest.xml",
    resource_files = glob(["res/**"]),
    tags = ["manual"],
    deps = [
        ":native_library",
    ],
)

# we use this to set fat_apk_cpu so that we build the app with `bazel build //...`
# TODO: currently the other architectures fail to build
android_cpu_wrapper(
    name = "app_all_cpus",
    actual = ":app",
    cpus = [
        "arm64-v8a",
    ],
    visibility = ["//visibility:public"],
)
