load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//viewers:util.bzl", "all_maps")

rust_library(
    name = "app",
    srcs = [
        "app.rs",
        "bootstrap.rs",
        "content.rs",
        "lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine",
        "//engine/quadtree",
        "//engine/tiles",
        "@crates//:anyhow",
        "@crates//:egui",
        "@crates//:egui_wgpu_backend",
        "@crates//:egui_winit_platform",
        "@crates//:env_logger",
        "@crates//:log",
        "@crates//:pollster",
        "@crates//:wgpu",
        "@crates//:winit",
    ],
)

rust_binary(
    name = "desktop",
    srcs = ["desktop.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":app",
        "@crates//:clap",
    ],
)

all_maps(
    "desktop",
    name_prefix = "desktop.",
)
