load("//util:macros.bzl", "ms_rust_binary", "ms_rust_library")
load("//viewers:util.bzl", "all_maps")

ms_rust_library(
    name = "app",
    srcs = [
        "app.rs",
        "bootstrap.rs",
        "chart.rs",
        "content.rs",
        "field_overlay.rs",
        "lib.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//engine",
        "//engine/agent",
        "//engine/highway",
        "//engine/metro",
        "//engine/network",
        "//engine/quadtree",
        "//engine/route",
        "//engine/state",
        "//engine/tiles",
        "//util:spline_util",
        "@crates//:anyhow",
        "@crates//:cgmath",
        "@crates//:chrono",
        "@crates//:egui",
        "@crates//:egui_wgpu_backend",
        "@crates//:egui_winit_platform",
        "@crates//:enum-iterator",
        "@crates//:env_logger",
        "@crates//:itertools",
        "@crates//:lazy_static",
        "@crates//:log",
        "@crates//:pollster",
        "@crates//:rand",
        "@crates//:uom",
        "@crates//:wgpu",
        "@crates//:winit",
    ],
)

ms_rust_binary(
    name = "desktop",
    srcs = ["desktop.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":app",
        "@crates//:clap",
    ],
)

all_maps(
    "desktop",
    name_prefix = "desktop.",
)
