load("@rules_python//python:defs.bzl", "py_binary")
load("@pip_pkgs//:requirements.bzl", "requirement")

py_binary(
    name = "debug",
    srcs = ["main.py"],
    data = ["//config:debug.toml"],
    main = "main.py",
    deps = [
        requirement("pygame"),
        requirement("pygame_gui"),
        requirement("argh"),
        "//ffi/python",
    ],
)
