load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//viewers:util.bzl", "all_maps")

rust_binary(
    name = "editor",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//engine",
        "//engine/fields",
        "//engine/highway",
        "//engine/metro",
        "//engine/quadtree",
        "//engine/state",
        "//engine/tiles",
        "@crates//:anyhow",
        "@crates//:cgmath",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:druid",
        "@crates//:itertools",
    ],
)

all_maps(
    arg_name = "--load",
    target = ":editor",
)
