load("//util:macros.bzl", "ms_rust_binary")
load("//viewers:util.bzl", "all_maps")

ms_rust_binary(
    name = "editor",
    srcs = ["main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//engine",
        "//engine/highway",
        "//engine/metro",
        "//engine/network",
        "//engine/quadtree",
        "//engine/state",
        "//engine/tiles",
        "//util:spline_util",
        "@crates//:anyhow",
        "@crates//:cgmath",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:druid",
        "@crates//:itertools",
    ],
)

all_maps(
    arg_name = "--load",
    target = ":editor",
)
