load("//util:macros.bzl", "ms_rust_test")

ms_rust_test(
    name = "timing_consistency_test",
    srcs = ["timing_consistency_test.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "//engine/metro",
        "@crates//:cgmath",
        "@crates//:float-cmp",
        "@crates//:itertools",
    ],
)
