load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_shared_library", "rust_test")
load("@crates//:defs.bzl", "crate")

rust_library(
    name = "sf_routes",
    srcs = ["sf_routes.rs"],
    data = ["//maps:sf"],
    deps = [
        crate("lazy_static"),
        "//engine",
        "//engine/route",
    ],
)

rust_test(
    name = "sf_routes_test",
    srcs = ["sf_routes_test.rs"],
    deps = [":sf_routes"],
)

rust_binary(
    name = "sf_routes_benchmark",
    srcs = ["sf_routes_benchmark.rs"],
    deps = [
        ":sf_routes",
        crate("bencher"),
    ],
)

# NOTE: only compiles for Android
rust_shared_library(
    name = "sf_routes_android_benchmark",
    srcs = ["sf_routes_android_benchmark.rs"],
    tags = ["manual"],
    deps = [
        "//engine",
        crate("ndk"),
        crate("ndk-glue"),
        "//util:benchmark_util",
    ],
)
