load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_shared_library", "rust_test")

rust_library(
    name = "sf_routes",
    srcs = ["sf_routes.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
        "//engine/quadtree",
        "//engine/route",
        "@crates//:lazy_static",
    ],
)

rust_test(
    name = "sf_routes_test",
    srcs = ["sf_routes_test.rs"],
    deps = [":sf_routes"],
)

rust_binary(
    name = "sf_routes_benchmark",
    srcs = ["sf_routes_benchmark.rs"],
    deps = [
        ":sf_routes",
        "//engine",
        "//engine/route",
        "@crates//:bencher",
        "@crates//:once_cell",
    ],
)

# NOTE: only compiles for Android
rust_shared_library(
    name = "sf_routes_android_benchmark",
    srcs = ["sf_routes_android_benchmark.rs"],
    tags = ["manual"],
    deps = [
        "//engine",
        "//util:benchmark_util",
        "@crates//:ndk",
        "@crates//:ndk-glue",
    ],
)

rust_binary(
    name = "isochrone_benchmark",
    srcs = ["isochrone_benchmark.rs"],
    deps = [
        ":sf_routes",
        "//engine",
        "//engine/quadtree",
        "//engine/route",
        "@crates//:bencher",
        "@crates//:once_cell",
    ],
)

rust_binary(
    name = "base_graph_timer",
    srcs = ["base_graph_timer.rs"],
    data = ["//maps:sf"],
    deps = [
        "//engine",
    ],
)
